Quorum3/Library/Tests/Expressions/Pass/OutputInt.quorum
class OutputInt 
    action Main
        output 5
    end
end