Quorum3/Library/Tests/Expressions/Fail/MainNotCapitalized.quorum
class Main 
    action Main
        output "hi"
    end
end